Fix typos and consistancy

--- a/languages/cs.ini
+++ b/languages/cs.ini
@@ -5,10 +5,10 @@ Access URL = "Přístupová URL adresa"
 access_denied = "Přístup odepřen."
 Accession Number = "Přístupové číslo"
 Account = "Účet"
-account_block_options_missing = "Některé možnosti ovládání čtenářského konta byly omezeny, protože je vaše konto zablokováno: %%details%%"
+account_block_options_missing = "Některé možnosti ovládání čtenářského konta byly omezeny, protože je Vaše konto zablokováno: %%details%%"
 account_checkouts_due = "Výpůjčky s blížícím se termínem vrácení"
 account_checkouts_overdue = "Výpůjčky s překročeným termínem vrácení"
-account_has_alerts = "Upozornění související s vaším účtem"
+account_has_alerts = "Upozornění související s Vaším účtem"
 account_normal_checkouts = "Výpůjčky"
 account_requests_available = "Připraveno k vyzvednutí"
 account_requests_in_transit = "Na cestě do místa vyzvednutí"
@@ -98,7 +98,7 @@ Author Results for = "Výsledky hledání pro autora"
 Author Search Results = "Výsledky hledání pro autora"
 Authority File = "Databáze autorit"
 Authors = "Autoři"
-Authors Related to Your Search = "Autoři relevantní k vašemu hledání"
+Authors Related to Your Search = "Autoři relevantní k Vašemu hledání"
 Auto configuration is currently disabled = "Automatická konfigurace je nyní vypnuta"
 auto_configure_description = "Pokud je toto nová instalace, můžete se pokusit odstranit tento problém použitím automatické konfigurace VuFindu."
 auto_configure_disabled = "Automatická konfigurace je vypnutá."
@@ -260,7 +260,7 @@ confirm_delete_list_text = "Opravdu chcete smazat tento seznam?"
 confirm_delete_tags_brief = "Odstranit tagy"
 confirm_dialog_no = "Ne"
 confirm_dialog_yes = "Ano"
-confirm_hold_cancel_all_text = "Chcete zrušit všechny vaše požadavky?"
+confirm_hold_cancel_all_text = "Chcete zrušit všechny Vaše požadavky?"
 confirm_hold_cancel_selected_text = "Chcete zrušit vybrané požadavky?"
 confirm_ill_request_cancel_all_text = "Opravdu chcete zrušit všechny požadavky na meziknihovní výpůjčky?"
 confirm_ill_request_cancel_selected_text = "Opravdu chcete zrušit vybrané požadavky na meziknihovní výpůjčky?"
@@ -420,11 +420,11 @@ export_send = "Začít export do %%service%%"
 export_success = "Export byl úspěšný"
 export_unsupported_format = "Nepodporovaný exportní formát."
 external_auth_access_heading = "Vyžádání přístupu"
-external_auth_access_login_message = "Externí aplikace žádá o přístup k vašim datům. Přihlaste se, abyste mohli požadavek zkontrolovat a povolit/odmítnout přístup."
+external_auth_access_login_message = "Externí aplikace žádá o přístup k Vašim datům. Přihlaste se, abyste mohli požadavek zkontrolovat a povolit/odmítnout přístup."
 external_auth_allow_access = "Povolit přístup"
 external_auth_deny_access = "Odmítnout přístup"
 external_auth_heading = "Přístup k licencovaným zdrojům"
-external_auth_ils_prompt = "Některé z požadovaných informací budou získány z vašeho profilu v katalogu knihovny."
+external_auth_ils_prompt = "Některé z požadovaných informací budou získány z Vašeho profilu v katalogu knihovny."
 external_auth_login_message = "Pro přístup k licencovaným zdrojům se přihlaste"
 external_auth_prompt_html = "požaduje přístup k následujícím datům:"
 external_auth_scope_address = "Adresa bydliště"
@@ -450,7 +450,7 @@ fav_delete_deleting = "Vaše oblíbené budou smazány."
 fav_delete_fail = "Promiňte, došlo k chybě. Vaše oblíbené položky nebyly smazány."
 fav_delete_missing = "Některé údaje chybí. Vaše oblíbené položky nebyly smazány."
 fav_delete_success = "Vaše oblíbené položky byly smazány."
-fav_delete_warn = "Chystáte se smazat tyto oblíbené položky z vašich seznamů - pokud chcete smazat oblíbené jen z určitého seznamu, prosím, vyberte seznam před kliknutím na smazat."
+fav_delete_warn = "Chystáte se smazat tyto oblíbené položky z Vašich seznamů - pokud chcete smazat oblíbené jen z určitého seznamu, prosím, vyberte seznam před kliknutím na smazat."
 fav_email_fail = "Promiňte, došlo k chybě. Vaše oblíbené položky nebylo možné odeslat e-mailem."
 fav_email_missing = "Některé údaje chybí. Vaše oblíbené položky nebyly odeslány e-mailem."
 fav_email_success = "Vaše oblíbené položky byly odeslány e-mailem jak bylo požadováno."
@@ -492,7 +492,7 @@ find_more_ellipsis = "Objevte více…"
 Finding Aid = "Pomůcka pro vyhledávání"
 Fine = "Upomínka"
 Fine Date = "Datum vytvoření poplatku"
-fine_limit_patron = "Dosáhli jste Vašeho limitu upomínek, vaše výpůjčky proto nelze prodloužit."
+fine_limit_patron = "Dosáhli jste Vašeho limitu upomínek, Vaše výpůjčky proto nelze prodloužit."
 Fines = "Upomínky"
 First = "První"
 First Name = "Jméno"
@@ -546,7 +546,7 @@ history_empty_search = "Cokoli (prázdný vyhledávací dotaz)"
 history_limits = "Použité filtry"
 history_login_html = "Pro zobrazení uložených hledání je třeba se <a href="%%url%%">přihlásit</a>."
 history_no_saved_searches = "Nemáte žádná uložená hledání."
-history_no_searches = "Přehled vašich vyhledávání je prázdný."
+history_no_searches = "Přehled Vašich vyhledávání je prázdný."
 history_purge = "Odstranit neuložená vyhledávání"
 history_recent_searches = "Vaše nedávná vyhledávání"
 history_results = "Výsledky"
@@ -833,12 +833,12 @@ nohit_active_filters = "Použili jste funkci upřesnění výsledků. Pokud tato
 nohit_change_tab = "Hledali jste v sekci "%%activeTab%%". Zkuste také další sekce, třeba budete úspěšní tam:"
 nohit_filters = "Filtry použité pro toto hledání:"
 nohit_heading = "Žádné výsledky!"
-nohit_lookfor_html = "Pro váš dotaz - <strong>%%lookfor%%</strong> - nebyl nalezen žádný výsledek."
+nohit_lookfor_html = "Pro Váš dotaz - <strong>%%lookfor%%</strong> - nebyl nalezen žádný výsledek."
 nohit_no_filters = "Pro toto hledání nebyly použity žádné filtry."
-nohit_parse_error = "Vypadá to, že je nějaký problém s vaším vyhledávacím dotazem. Zkuste zkontrolovat, je-li zapsán správně, nebo uzavřete hledaný výraz do uvozovek."
+nohit_parse_error = "Vypadá to, že je nějaký problém s Vaším vyhledávacím dotazem. Zkuste zkontrolovat, je-li zapsán správně, nebo uzavřete hledaný výraz do uvozovek."
 nohit_query_without_filters = "Odstranit všechna upřesnění výsledků."
 nohit_spelling = "Můžete zkusit použít některé podobné tvary"
-nohit_suggest = "Můžete se pokusit upravit váš vyhledávací dotaz vynecháním některých slov. Zkontrolujte také zda-li jste nenapsali nějaký překlep."
+nohit_suggest = "Můžete se pokusit upravit Váš vyhledávací dotaz vynecháním některých slov. Zkontrolujte také zda-li jste nenapsali nějaký překlep."
 NOT = "BEZ"
 Not Illustrated = "Bez ilustrací"
 Not On Reserve = "Není rezervováno"
@@ -980,7 +980,7 @@ password_only_numeric = "Pouze čísla"
 Passwords do not match = "Hesla se neshodují"
 past_days = "Za posledních %%range%% dnů"
 patron_account_expires = "Konec platnosti registrace"
-patron_status_address_missing = "U vašeho účtu chybí adresa."
+patron_status_address_missing = "U Vašeho účtu chybí adresa."
 patron_status_card_blocked = "Tento čtenářský průkaz byl zablokován."
 patron_status_card_expired = "Platnost čtenářského průkazu vypršela."
 patron_status_debarred_overdue = "Máte výpůjčky nevrácené v termínu."
@@ -1111,7 +1111,7 @@ Remove filter = "Odstranit filtr"
 Remove Filters = "Odstranit filtry"
 Remove from Book Bag = "Vyjmout z košíku"
 renew_all = "Prodloužit všechny výpůjčky"
-renew_determine_fail = "Systém nemůže zjistit je-li možné prodloužit vaše výpůjčky. Obraťte se na knihovníky s žádostí o pomoc. Děkujeme."
+renew_determine_fail = "Systém nemůže zjistit je-li možné prodloužit Vaše výpůjčky. Obraťte se na knihovníky s žádostí o pomoc. Děkujeme."
 renew_empty_selection = "Nic nebylo vybráno"
 renew_error = "Nelze prodloužit Vaše výpůjčky - obraťte se na knihovníky s žádostí o pomoc. Děkujeme."
 renew_fail = "Výpůjčku nelze prodloužit"
@@ -1184,7 +1184,7 @@ see all = "Zobrazit vše"
 See also = "Viz též"
 see_all_ellipsis = "Zobrazit vše…"
 Select this record = "Vybrat tento záznam"
-Select your carrier = "Vyberte vašeho operátora"
+Select your carrier = "Vyberte Vašeho operátora"
 select_page = "Vybrat vše"
 select_pickup_location = "Vybrat místo k vyzvednutí"
 select_request_group = "Vybrat skupinu požadavků"
@@ -1220,7 +1220,7 @@ sms_phone_number = "Desetimístné telefonní číslo"
 sms_sending = "Odesílám SMS"
 sms_success = "SMS úspěšně odeslána."
 Software = "Program"
-Sorry, but the help you requested is unavailable in your language. = "Omlouváme se, ale nápověda není k dispozici ve vašem jazyce."
+Sorry, but the help you requested is unavailable in your language. = "Omlouváme se, ale nápověda není k dispozici ve Vašem jazyce."
 Sort = "Seřadit podle"
 sort_alphabetic = "Abecedně"
 sort_author = "Autor"
@@ -1320,7 +1320,7 @@ Text = "Text"
 Text this = "Zaslat SMS"
 That email address is already used = "Tato e-mailová adresa je již použita"
 That username is already taken = "Toto uživatelské jméno již existuje"
-The record you selected is not part of any of your lists. = "Zvolený záznam není součástí žádného vašeho seznamu."
+The record you selected is not part of any of your lists. = "Zvolený záznam není součástí žádného Vašeho seznamu."
 The record you selected is not part of the selected list. = "Zvolený záznam není součástí vybraného seznamu."
 The system is currently unavailable due to system maintenance = "Aplikace je momentálně nedostupná z důvodu údržby"
 Theme = "Šablona"
@@ -1337,8 +1337,8 @@ title_wrapper = "%%pageTitle%% %%titleSeparator%% %%siteTitle%%"
 To = "Komu"
 Too Many Email Recipients = "Bylo vloženo příliš mnoho příjemců zprávy"
 too_many_favorites = "Tento seznam obsahuje příliš mnoho položek. Zkuste rozdělit oblíbené položky do více seznamů, případně omezte počet tagů."
-too_many_new_items = "V jednom seznamu nelze zobrazit tolik položek. Zkuste upřesnit parametry vašeho hledání."
-too_many_reserves = "V jednom seznamu nelze zobrazit tolik kurzů. Zkuste upřesnit parametry vašeho hledání."
+too_many_new_items = "V jednom seznamu nelze zobrazit tolik položek. Zkuste upřesnit parametry Vašeho hledání."
+too_many_reserves = "V jednom seznamu nelze zobrazit tolik kurzů. Zkuste upřesnit parametry Vašeho hledání."
 top_facet_label = "%%label%% ve výsledcích tohoto hledání:"
 Topic = "Téma"
 Topics = "Témata"
@@ -1350,7 +1350,7 @@ total_saved_items = "Celkem uložených položek"
 total_tags = "Celkem tagů"
 total_users = "Celkem uživatelů"
 Transliterated Title = "Transliterovaný název"
-tree_search_limit_reached_html = "Na váš dotaz bylo nalezeno příliš mnoho výsledků, proto je nebylo možné všechny zobrazit ve stromové struktuře. Bylo zobrazeno pouze prvních <b>%%limit%%</b> položek. Pro zobrazení všech výsledků klikněte <a id="fullSearchLink" href="%%url%%" target="_blank">zde.</a>"
+tree_search_limit_reached_html = "Na Váš dotaz bylo nalezeno příliš mnoho výsledků, proto je nebylo možné všechny zobrazit ve stromové struktuře. Bylo zobrazeno pouze prvních <b>%%limit%%</b> položek. Pro zobrazení všech výsledků klikněte <a id="fullSearchLink" href="%%url%%" target="_blank">zde.</a>"
 trending_items_channel_title = "O co je teď zájem"
 unique_tags = "Unikátní tagy"
 University Library = "Univerzitní knihovna"
