--- a/languages/CookieConsent/cs.ini
+++ b/languages/CookieConsent/cs.ini
@@ -1,6 +1,6 @@
 Accept All Cookies = "Přijmout vše"
 Accept Only Essential Cookies = "Přijmout pouze nezbytné cookies"
-analytics_cookies_description_html = "<p>Analytické cookies umožňují sledovat souhrnné informace o&nbsp;návštěvnosti stránek.<br>Díky těmto informacím jsme schopni lépe přizpůsobit stránky uživatelům webu.</p><p>Jsou povoleny pouze na&nbsp;základě vašeho souhlasu.</p>"
+analytics_cookies_description_html = "<p>Analytické cookies umožňují sledovat souhrnné informace o&nbsp;návštěvnosti stránek.<br>Díky těmto informacím jsme schopni lépe přizpůsobit stránky uživatelům webu.</p><p>Jsou povoleny pouze na&nbsp;základě Vašeho souhlasu.</p>"
 analytics_cookies_title_html = "Analytické cookies"
 category_description_html = "Cookies používané na těchto stránkách jsou rozděleny do několika kategorií podle účelu. Popis jednotlivých kategorií a možnost jejich přijetí nebo odmítnutí naleznete níže. <a href="%%siteRootAttr%%/Content/privacy" target="_blank">Informace o ochraně osobních údajů.</a>."
 cookie_description_cart_html = "Používá se k uložení obsahu košíku."
@@ -26,7 +26,7 @@ expiration_unit_days = "%%expiration%% dní"
 expiration_unit_months = "%%expiration%% měsíců"
 Name = "Název"
 popup_description_html = "Tento web používá následující soubory cookies: funkční cookies (vždy) k zajištění správného fungování webu a analytické cookies (na základě souhlasu) k analýze návštěvnosti webu. Žádné z těchto cookies nelze použít k identifikaci konkrétní osoby. <a href="#" data-cc="show-preferencesModal">Cookie settings</a>.<br>{{revisionMessage}}"
-popup_revision_message_html = "Potřebujeme znovu potvrdit Váš souhlas se zpracováním cookies, protože se změnili kategorie ukládaných údajů."
+popup_revision_message_html = "Potřebujeme znovu potvrdit Váš souhlas se zpracováním cookies, protože se změnily kategorie ukládaných údajů."
 popup_title_html = "Souhlas s použitím cookies"
 Save Settings = "Uložit nastavení"
 third_party_html = "Cookie třetí strany"
