--- a/languages/en.ini
+++ b/languages/en.ini
@@ -1402,6 +1402,7 @@ View Records = "View Records"
 View Retraction Notice = "View Retraction Notice"
 View this record in EBSCOhost = "View this record in EBSCOhost"
 view_already_selected = "%%current%% view already selected"
+view_in_opac = "View in OPAC"
 visual_facet_parent = "From"
 Volume = "Volume"
 Volume Holdings = "Volume Holdings"
