Polish Czech translation strings

--- a/languages/CookieConsent/cs.ini
+++ b/languages/CookieConsent/cs.ini
@@ -1,6 +1,6 @@
 Accept All Cookies = "Přijmout vše"
 Accept Only Essential Cookies = "Přijmout pouze nezbytné cookies"
-analytics_cookies_description_html = "<p>Analytické cookies umožňují sledovat souhrnné informace o&nbsp;návštěvnosti stránek.<br>Díky těmto informacím jsme schopni lépe přizpůsobit stránky uživatelům webu.</p><p>Jsou povoleny pouze na&nbsp;základě Vašeho souhlasu.</p>"
+analytics_cookies_description_html = "<p>Analytické cookies umožňují sledovat souhrnné informace o&nbsp;chování návštěvníků stránek.<br>Díky těmto informacím jsme schopni lépe přizpůsobit stránky uživatelům webu.</p><p>Jsou povoleny pouze na základě Vašeho souhlasu.</p>"
 analytics_cookies_title_html = "Analytické cookies"
 category_description_html = "Cookies používané na těchto stránkách jsou rozděleny do několika kategorií podle účelu. Popis jednotlivých kategorií a možnost jejich přijetí nebo odmítnutí naleznete níže. <a href="%%siteRootAttr%%/Content/privacy" target="_blank">Informace o ochraně osobních údajů.</a>."
 cookie_description_cart_html = "Používá se k uložení obsahu košíku."
@@ -17,7 +17,7 @@ cookie_description_ui_html = "Slouží k uložení vybrané grafické šablony."
 cookie_settings_html = "Nastavit cookies"
 Description = "Popis"
 Domain = "Doména"
-essential_cookies_description_html = "<p>Funkční cookies jsou zapotřebí k zajištění základních funkcí webu.</p><p>Vzhledem k jejich podstatě a účelu jsou povoleny vždy a souhlas s jejich použitím není vyžadován.</p>"
+essential_cookies_description_html = "<p>Funkční cookies jsou zapotřebí k zajištění základních funkcí webu.</p><p>Vzhledem k jejich významu a účelu jsou povoleny vždy a souhlas s jejich použitím není vyžadován.</p>"
 essential_cookies_title_html = "Funkční cookies"
 Expiration = "Platnost"
 expiration_never = "Trvale"
