--- a/languages/cs.ini
+++ b/languages/cs.ini
@@ -114,7 +114,7 @@ Bag = "Košík"
 Balance = "Dluh/Kredit"
 Barcode = "Čárový kód"
 Be the first to leave a comment = "Buďte první, kdo okomentuje tento záznam"
-Be the first to tag this record = "Buďte první, kdo otaguje tento záznam"
+Be the first to tag this record = "Buďte první, kdo vytvoří štítek k tomuto záznamu"
 Bibliographic Details = "Podrobná bibliografie"
 Bibliography = "Bibliografie"
 blender_backend_error_message = "%%error%% -- %%label%%"
@@ -583,7 +583,7 @@ hold_error_blocked = "Nemáte dostatečné oprávnění k zadání požadavku na
 hold_error_fail = "Váš požadavek selhal. Kontaktujte pracovníky knihovny pro další informace."
 hold_error_item_not_holdable = "Na tuto jednotku nelze vytvořit požadavek."
 hold_error_not_holdable = "Na tento dokument nelze vytvořit požadavek."
-hold_error_on_shelf_blocked = "Knihovna neumožňuje vytvářet požadavky na dokumenty, které nejsou vypůjčené."
+hold_error_on_shelf_blocked = "Knihovna neumožňuje vytvářet požadavky na rezervaci dokumentů, které nejsou vypůjčené."
 hold_error_too_many_holds = "Požadavek nemohl být vytvořen, dosáhli jste maximálního počtu požadavků."
 hold_error_update_blocked_status = "Rezervace je ve stavu, který brání některým nebo všem změnám."
 hold_error_update_failed = "Rezervaci se nepodařilo upravit."
@@ -1105,7 +1105,7 @@ relais_search = "Hledat v meziknihovních výpůjčkách"
 relais_success_label = "Potvrzení:"
 relais_success_message = "Objednávka číslo #%%id%% byla vytvořena. E-mailem obdržíte potvrzení"
 Related Author = "Související autoři"
-Related Items = "Příbuzné jednotky"
+Related Items = "Podobné jednotky"
 Related Subjects = "Související témata"
 Remove filter = "Odstranit filtr"
 Remove Filters = "Odstranit filtry"
@@ -1377,7 +1377,7 @@ username_only_alphanumeric = "Pouze čísla a písmena A-Z"
 username_only_letters_numbers_and_basic_punctuation = "Pouze písmena, číslice a běžná interpunkční znaménka"
 username_only_numeric = "Pouze čísla"
 verification_done = "Vaše e-mailová adresa byla úspěšně ověřena."
-verification_email_change_sent = "Na Vaši e-mailovou adresu byly zaslány instrukce pro ověření Vaší adresy. Vaši e-mailovou adresu nebudeme moci použít, dokud její ověření neprovedete."
+verification_email_change_sent = "Na Vaši e-mailovou adresu byly zaslány instrukce pro ověření e-mailové adresy. Vaši e-mailovou adresu nebudeme moci použít, dokud její ověření neprovedete."
 verification_email_notification = "Byl vytvořen požadavek na ověření Vaší e-mailové adresy pro účet v knihovně: %%library%%."
 verification_email_sent = "Zpráva s instrukcemi k ověření Vaší e-mailové adresy byla zaslaná na adresu zadanou při vytvoření účtu."
 verification_email_subject = "Ověření e-mailové adresy"
