add missing czech translation for account_requests_other

--- a/languages/cs.ini
+++ b/languages/cs.ini
@@ -12,6 +12,7 @@ account_has_alerts = "Upozornění související s vaším účtem"
 account_normal_checkouts = "Výpůjčky"
 account_requests_available = "Připraveno k vyzvednutí"
 account_requests_in_transit = "Na cestě do místa vyzvednutí"
+account_requests_other = "Jiný stav"
 Add a Library Card = "Připojit další účet"
 Add a Library Card using login = "Připojit další účet institucionálním přihlášením"
 Add a Note = "Přidat poznámku"
