add aria label for control elements

--- a/languages/de.ini
+++ b/languages/de.ini
@@ -778,6 +778,7 @@ MLA Citation = "MLA Zitierstil"
 MLA Edition Citation = "MLA-Zitierstil (8. Ausg.)"
 Mobile Number = "Handynummer"
 mobile_link = "Sie scheinen ein Mobilgerät zu benutzen. Möchten Sie zur Ansicht für Mobilgeräte wechseln?"
+mobile_toggle_navigation_text = "Menü aufklappen"
 Monograph Title = "Titel der Monografie"
 more = "mehr"
 More catalog results = "Mehr Katalogtreffer"
@@ -1334,6 +1335,7 @@ Title View = "Titelansicht"
 title_hold_place = "Eine Anfrage zu einem allgemeinen Titel aufgeben"
 title_wrapper = "%%pageTitle%% %%titleSeparator%% %%siteTitle%%"
 To = "An"
+toggle_dropdown = "Untermenü aufklappen"
 Too Many Email Recipients = "Zu viele E-Mail-Adressen"
 too_many_favorites = "Diese Liste ist zu gross um auf einmal angezeigt zu werden. Versuchen Sie Ihre Favoriten in weitere Listen zu unterteilen oder mittels Tags einzuschränken."
 too_many_new_items = "Es gibt zu viele Einträge um in einer einzigen Liste angezeigt zu werden. Versuchen Sie Ihre Suche weiter einzuschränken."
