--- a/languages/en.ini
+++ b/languages/en.ini
@@ -1351,6 +1351,7 @@ total_users = "Total Users"
 Transliterated Title = "Transliterated Title"
 tree_search_limit_reached_html = "Your search returned too many results to display in the tree. Showing only the first <b>%%limit%%</b> items. For a full search click <a id="fullSearchLink" href="%%url%%" target="_blank">here.</a>"
 trending_items_channel_title = "Trending Items"
+Uncertain = "Uncertain"
 unique_tags = "Unique Tags"
 University Library = "University Library"
 Unknown = "Unknown"
