--- a/languages/sv.ini
+++ b/languages/sv.ini
@@ -1350,6 +1350,7 @@ total_users = "Totalantar användare"
 Transliterated Title = "Translittererad titel"
 tree_search_limit_reached_html = "Din sökning gav för många resultat att visa i trädet. Visar de första <b>%%limit%%</b> resultat. Klicka <a id="fullSearchLink" href="%%url%%" target="_blank">här</a> för att se alla resultat."
 trending_items_channel_title = "Hett nu"
+Uncertain = "Osäker"
 unique_tags = "Unika taggar"
 University Library = "Universitetsbibliotek"
 Unknown = "Okänd"
