Test commit from lokalise. Edited one German translation.

--- a/languages/HoldingStatus/de.ini
+++ b/languages/HoldingStatus/de.ini
@@ -1,6 +1,6 @@
 copies_ordered_on_date = "%%copies%% Kopien bestellt am %%date%%"
 copy_ordered_on_date = "1 Kopie bestellt am %%date%%"
 service_available_presentation = "Nur Präsenznutzung"
-service_loan = "Ausleihexemplar"
+service_loan = Ausleihexemplar
 service_presentation = "Präsenzexemplar"
 services_available_html = "Verfügbar als %%list%%"
