--- a/languages/CookieConsent/de.ini
+++ b/languages/CookieConsent/de.ini
@@ -1,8 +1,13 @@
-Accept All Cookies = "Alle Cookies annehmen"
-Accept Only Essential Cookies = "Nur funktional notwendige Cookies akzeptieren"
+Accept All Cookies = Alle Cookies annehmen
+Accept Only Essential Cookies = Nur funktional notwendige Cookies akzeptieren
+Description = Beschreibung
+Domain = "Domäne"
+Expiration = Ablaufdatum
+Name = Name
+Save Settings = Einstellungen speichern
 analytics_cookies_description_html = "Die mit Analyse-Cookies gesammelten Daten werden für die Entwicklung der Website benutzt."
-analytics_cookies_title_html = "Analyse-Cookies"
-category_description_html = "Die auf der Website eingesetzten Cookies sind nach ihrem Verwendungszweck unterteilt. Im Folgenden finden Sie eine Beschreibung jeder Kategorie sowie die Möglichkeit, sie zu akzeptieren oder abzulehnen. <a href="%%siteRootAttr%%/Content/privacy" target="_blank">Datenschutzinformationen für die Website</a>."
+analytics_cookies_title_html = Analyse-Cookies
+category_description_html = 'Die auf der Website eingesetzten Cookies sind nach ihrem Verwendungszweck unterteilt. Im Folgenden finden Sie eine Beschreibung jeder Kategorie sowie die Möglichkeit, sie zu akzeptieren oder abzulehnen. <a href="%%siteRootAttr%%/Content/privacy" target="_blank">Datenschutzinformationen für die Website</a>.'
 cookie_description_cart_html = "Wird benutzt um den Inhalt der Zwischenablage zu speichern."
 cookie_description_consent_html = "Wird verwendet, um Informationen darüber zu speichern, ob Besucher der Verwendung der Cookie-Kategorien auf der Website zugestimmt oder sie abgelehnt haben."
 cookie_description_language_html = "Dient zum Speichern der aktuell ausgewählten Sprache der Benutzeroberfläche."
@@ -14,19 +19,14 @@ cookie_description_secure_key_html = "Wird für die Verschlüsselung von Sitzung
 cookie_description_session_html = "Wird verwendet, um den Sitzungsstatus des Benutzers beizubehalten."
 cookie_description_sidefacet_html = "Wird verwendet, um den Zustand der aufgeklappeten / geschlossenen Facetten beizubehalten."
 cookie_description_ui_html = "Dient zum Speichern des ausgewählten Layouts."
-cookie_settings_html = "Cookie-Einstellungen"
-Description = "Beschreibung"
-Domain = "Domäne"
+cookie_settings_html = Cookie-Einstellungen
 essential_cookies_description_html = "Die Verwendung funktional notwendiger Cookies kann nicht abgelehnt werden. Sie sind für das grundlegende Funktionieren der Website erforderlich und verbessern die Benutzerfreundlichkeit der Website."
-essential_cookies_title_html = "Funktionale notwendige Cookies"
-Expiration = "Ablaufdatum"
-expiration_never = "Nie"
-expiration_session = "Ende der Session"
+essential_cookies_title_html = Funktionale notwendige Cookies
+expiration_never = Nie
+expiration_session = Ende der Session
 expiration_unit_days = "%%expiration%% Tage"
 expiration_unit_months = "%%expiration%% Monate"
-Name = "Name"
-popup_description_html = "Diese Website verwendet funktional notwendige Cookies, um den grundlegenden Betrieb zu gewährleisten, und Tracking-Cookies, um zu analysieren, wie Sie mit der Website interagieren. <a href="#" data-cc="show-preferencesModal">Cookie-Einstellungen</a>.<br>{{revisionMessage}}"
+popup_description_html = 'Diese Website verwendet funktional notwendige Cookies, um den grundlegenden Betrieb zu gewährleisten, und Tracking-Cookies, um zu analysieren, wie Sie mit der Website interagieren. <a href="#" data-cc="show-preferencesModal">Cookie-Einstellungen</a>.<br>{{revisionMessage}}'
 popup_revision_message_html = "Wir bitten Sie um Ihre Zustimmung, da die verschiedenen Cookie-Kategorien aktualisiert worden sind."
-popup_title_html = "Informationen zu den auf der Website verwendeten Cookies"
-Save Settings = "Einstellungen speichern"
-third_party_html = "Drittpartei"
+popup_title_html = Informationen zu den auf der Website verwendeten Cookies
+third_party_html = Drittpartei
