--- a/languages/CreatorRoles/de.ini
+++ b/languages/CreatorRoles/de.ini
@@ -1,356 +1,346 @@
-; This file includes translations for author relator terms/abbreviations of the following standards:
-; * MARC Code List for Relators (http://www.loc.gov/marc/relators/relacode.html)
-;   including discontinued codes: clb, grt, voc
-; * German RAK Code List (recommended) for Relators
-; * German RAK Code List for Relators extended by HBZ
-; * German RAK Code List for Relators extended by GBV
-; * German RAK Code List for Relators extended by SWB
-;   (http://swbtools.bsz-bw.de/cgi-bin/help.pl?cmd=kat&val=3010)
-; Note: In some cases, terms are case sensitive, and case determines meaning;
-;       for example, see Beiträger vs. beiträger.
+Adressat = Adressat
+Angebl Verf = angeblicher Verfasser
+Auftraggeber = Auftraggeber
+Bearb = Bearbeiter
+Begr = "Begründer"
+Beiträger = "Beiträger"
+Forts = Fortsetzung
+Hrsg = Herausgeber
+Ill = Illustrator
+Komment = Kommentator
+Komp = Komponist
+Korresp = Korrespondent
+Mutmaßl Verf = "mutmaßlicher Verfasser"
+Nachr = "Autor von Nachwort, Kolophon, etc."
+Red = Redakteur
+Sammler = Sammler
+Schreiber = Schreiber
+Verstorb = Verstorbener
+Vorr = "Autor der Einleitung, Vorwort, etc."
 abr = "KürzendeR"
-acp = "HerstellerIn von Nachbildungen"
-act = "SchauspielerIn"
-adi = "Art Director"
-adp = "BearbeiterIn"
-Adressat = "Adressat"
-adressat = "Adressat"
-aft = "VerfasserIn eines Nachworts"
-angebl hrsg = "angeblicher Herausgeber"
+acp = HerstellerIn von Nachbildungen
+act = SchauspielerIn
+adi = Art Director
+adp = BearbeiterIn
+adressat = Adressat
+aft = VerfasserIn eines Nachworts
+angebl hrsg = angeblicher Herausgeber
 angebl komp = "Angeblicher Verfasser / Komponist"
-Angebl Verf = "angeblicher Verfasser"
-angebl verf = "Angeblicher Verfasser"
+angebl verf = Angeblicher Verfasser
 angebl übers = "angeblicher Übersetzer"
-animation = "Animation"
-anl = "AnalytikerIn"
-anm = "TrickfilmzeichnerIn"
-ann = "KommentatorIn"
+animation = Animation
+anl = AnalytikerIn
+anm = TrickfilmzeichnerIn
+ann = KommentatorIn
 ant = "BibliographischeR VorgängerIn"
 ape = "BerufungsbeklagteR/RevisionsbeklagteR"
 apl = "BerufungsklägerIn/RevisionsklägerIn"
-app = "AntragstellerIn"
-aqt = "AutorIn von Zitaten oder Textabschnitten"
-arc = "ArchitektIn"
+app = AntragstellerIn
+aqt = AutorIn von Zitaten oder Textabschnitten
+arc = ArchitektIn
 ard = "künstlerische Leitung"
-arr = "ArrangeurIn"
+arr = ArrangeurIn
 art = "KünstlerIn"
-asg = "RechtsnachfolgerIn"
+asg = RechtsnachfolgerIn
 asn = "zugehöriger Name"
-ato = "AutographIn"
+ato = AutographIn
 att = "zugehöriger Name"
-auc = "AuktionatorIn"
-aud = "AutorIn des Dialogs"
-Auftraggeber = "Auftraggeber"
-aui = "VerfasserIn eines Geleitwortes"
-aus = "DrehbuchautorIn"
-aut = "VerfasserIn"
-bdd = "BindungsgestalterIn"
-Bearb = "Bearbeiter"
-bearb = "Bearbeiter"
-Begr = "Begründer"
+auc = AuktionatorIn
+aud = AutorIn des Dialogs
+aui = VerfasserIn eines Geleitwortes
+aus = DrehbuchautorIn
+aut = VerfasserIn
+bdd = BindungsgestalterIn
+bearb = Bearbeiter
 begr = "Begründer"
-Beiträger = "Beiträger"
 beiträger = "literarischer Beiträger"
 beiträger k = "künstlerischer Beiträger"
 beiträger m = "musikalischer Beiträger"
-bjd = "EinbandgestalterIn"
-bkd = "BuchgestalterIn"
-bkp = "BuchherstellerIn"
-blw = "AutorIn des Klappentextes"
-bnd = "BuchbinderIn"
-bpd = "GestalterIn des Exlibris"
-brd = "Sender"
+bjd = EinbandgestalterIn
+bkd = BuchgestalterIn
+bkp = BuchherstellerIn
+blw = AutorIn des Klappentextes
+bnd = BuchbinderIn
+bpd = GestalterIn des Exlibris
+brd = Sender
 brl = "BrailleschriftprägerIn"
 bsl = "BuchhändlerIn"
 bühnenbild = "Bühnenbild"
 cas = "FormgießerIn"
-ccp = "konzeptionelle Leitung"
-choreinstud = "Choreinstudierung"
-choreogr = "Choreograph"
-chr = "ChoreografIn"
-clb = "MitarbeiterIn"
+ccp = konzeptionelle Leitung
+choreinstud = Choreinstudierung
+choreogr = Choreograph
+chr = ChoreografIn
+clb = MitarbeiterIn
 cli = "KlientIn, AuftraggeberIn"
-cll = "KalligrafIn"
-clr = "KoloristIn"
-clt = "LichtdruckerIn"
-cmm = "KommentatorIn"
-cmp = "KomponistIn"
-cmt = "SchriftsetzerIn"
-cnd = "DirigentIn"
+cll = KalligrafIn
+clr = KoloristIn
+clt = LichtdruckerIn
+cmm = KommentatorIn
+cmp = KomponistIn
+cmt = SchriftsetzerIn
+cnd = DirigentIn
 cng = "Kameramann/frau"
-cns = "ZensorIn"
-coe = "BerufungsbeklagteR im streitigen Verfahren"
-col = "SammlerIn"
-com = "ZusammenstellendeR"
-con = "KonservatorIn"
-cor = "SammlungskuratorIn"
+cns = ZensorIn
+coe = BerufungsbeklagteR im streitigen Verfahren
+col = SammlerIn
+com = ZusammenstellendeR
+con = KonservatorIn
+cor = SammlungskuratorIn
 cos = "AnfechtendeR, bestreitende Partei"
 cot = "BerufungsklägerIn im streitigen Verfahren"
 cou = "zuständiges Gericht"
-cov = "UmschlaggestalterIn"
-cpc = "BeansprucherIn des Urheberrechts"
+cov = UmschlaggestalterIn
+cpc = BeansprucherIn des Urheberrechts
 cpe = "BeschwerdeführerIn-BerufungsbeklagteR"
-cph = "InhaberIn des Urheberrechts"
+cph = InhaberIn des Urheberrechts
 cpl = "BeschwerdeführerIn/KlägerIn"
 cpt = "KlägerIn/BerufungsklägerIn"
 cre = "GeistigeR SchöpferIn"
-crp = "KorrespondentIn"
-crr = "KorrektorIn"
-crt = "GerichtsstenografIn"
-csl = "BeraterIn"
-csp = "ProjektberaterIn"
+crp = KorrespondentIn
+crr = KorrektorIn
+crt = GerichtsstenografIn
+csl = BeraterIn
+csp = ProjektberaterIn
 cst = "KostümbildnerIn"
-ctb = "MitwirkendeR"
-cte = "AnfechtungsgegnerIn-BerufungsbeklagteR"
-ctg = "KartografIn"
-ctr = "VertragspartnerIn"
-cts = "AnfechtungsgegnerIn"
+ctb = MitwirkendeR
+cte = AnfechtungsgegnerIn-BerufungsbeklagteR
+ctg = KartografIn
+ctr = VertragspartnerIn
+cts = AnfechtungsgegnerIn
 ctt = "AnfechtungsgegnerIn-BerufungsklägerIn"
-cur = "KuratorIn"
-cwt = "KommentatorIn"
-darst = "Darsteller"
-dbp = "Erscheinungsort"
+cur = KuratorIn
+cwt = KommentatorIn
+darst = Darsteller
+dbp = Erscheinungsort
 dfd = "AngeklagteR/BeklagteR"
 dfe = "AngeklagteR/BeklagteR-BerufungsbeklagteR"
 dft = "AngeklagteR/BeklagteR-BerufungsklägerIn"
-dgg = "Grad-verleihende Institution"
-dgs = "AkademischeR BetreuerIn"
-dir = "Dirigent"
-dis = "PromovierendeR"
-dln = "VorzeichnerIn"
+dgg = Grad-verleihende Institution
+dgs = AkademischeR BetreuerIn
+dir = Dirigent
+dis = PromovierendeR
+dln = VorzeichnerIn
 dnc = "TänzerIn"
-dnr = "GeldgeberIn"
-dpc = "AbgebildeteR"
-dpt = "AnlegerIn"
-drehbuch = "Drehbuch"
-drm = "TechnischeR ZeichnerIn"
-drt = "RegisseurIn"
-dsr = "DesignerIn"
-dst = "Vertrieb"
-dtc = "BereitstellerIn von Daten"
+dnr = GeldgeberIn
+dpc = AbgebildeteR
+dpt = AnlegerIn
+drehbuch = Drehbuch
+drm = TechnischeR ZeichnerIn
+drt = RegisseurIn
+dsr = DesignerIn
+dst = Vertrieb
+dtc = BereitstellerIn von Daten
 dte = "WidmungsempfängerIn"
-dtm = "DatenmanagerIn"
-dto = "WidmendeR"
-dub = "angeblicheR AutorIn"
-edc = "BearbeiterIn der Zusammenstellung"
-edm = "CutterIn"
-edt = "HerausgeberIn"
-egr = "StecherIn"
-elg = "ElektrikerIn"
-elt = "GalvanisiererIn"
-eng = "IngenieurIn"
+dtm = DatenmanagerIn
+dto = WidmendeR
+dub = angeblicheR AutorIn
+edc = BearbeiterIn der Zusammenstellung
+edm = CutterIn
+edt = HerausgeberIn
+egr = StecherIn
+elg = ElektrikerIn
+elt = GalvanisiererIn
+eng = IngenieurIn
 enj = "Normerlassende Gebietskörperschaft"
-etr = "RadiererIn"
-evp = "Veranstaltungsort"
-exp = "ExperteIn"
-fac = "FacsimilistIn"
-fds = "Filmvertrieb"
-fld = "BereichsleiterIn"
-flm = "BearbeiterIn des Films"
-fmd = "FilmregisseurIn"
-fmk = "FilmemacherIn"
+etr = RadiererIn
+evp = Veranstaltungsort
+exp = ExperteIn
+fac = FacsimilistIn
+fds = Filmvertrieb
+fld = BereichsleiterIn
+flm = BearbeiterIn des Films
+fmd = FilmregisseurIn
+fmk = FilmemacherIn
 fmo = "frühereR BesitzerIn"
-fmp = "FilmproduzentIn"
+fmp = FilmproduzentIn
 fnd = "GründerIn"
-Forts = "Fortsetzung"
-fotogr = "Fotograf"
-fpy = "Erste Partei"
+fotogr = Fotograf
+fpy = Erste Partei
 frg = "FälscherIn"
-gis = "GeographIn"
-grt = "GraphischeR TechnikerIn"
-hg = "Herausgeber"
-his = "Gastgebende Institution"
-hnr = "GefeierteR"
-Hrsg = "Herausgeber"
-hrsg = "Herausgeber"
-hst = "GastgeberIn"
-Ill = "Illustrator"
-ill = "IllustratorIn"
+gis = GeographIn
+grt = GraphischeR TechnikerIn
+hg = Herausgeber
+his = Gastgebende Institution
+hnr = GefeierteR
+hrsg = Herausgeber
+hst = GastgeberIn
+ill = IllustratorIn
 ilu = "Illuminator, BuchmalerIn"
-ins = "InserierendeR"
-inszenierung = "Inszenierung"
-interpr = "Interpret"
-interpret = "Interpret"
-interviewer = "Interviewer"
-interviewter = "Interviewter"
-inv = "ErfinderIn"
-isb = "Herausgebendes Organ"
-itr = "InstrumentalmusikerIn"
-ive = "InterviewteR"
-ivr = "InterviewerIn"
-jud = "RichterIn"
+ins = InserierendeR
+inszenierung = Inszenierung
+interpr = Interpret
+interpret = Interpret
+interviewer = Interviewer
+interviewter = Interviewter
+inv = ErfinderIn
+isb = Herausgebendes Organ
+itr = InstrumentalmusikerIn
+ive = InterviewteR
+ivr = InterviewerIn
+jud = RichterIn
 jug = "zuständige Gerichtsbarkeit"
-kad = "Kadenzverfasser"
-kamera = "Kamera"
-kartograph = "Kartograph"
-komm = "Kommentator"
-Komment = "Kommentator"
-Komp = "Komponist"
-komp = "Komponist"
-Korresp = "Korrespondent"
+kad = Kadenzverfasser
+kamera = Kamera
+kartograph = Kartograph
+komm = Kommentator
+komp = Komponist
 kostüm = "Kostüm"
-lbr = "Labor"
-lbt = "LibrettistIn"
-ldr = "Laborleitung"
+lbr = Labor
+lbt = LibrettistIn
+ldr = Laborleitung
 led = "Führung"
-lee = "Libelee-appellee"
+lee = Libelee-appellee
 lel = "BeklagteR im Seerecht/Kirchenrecht"
-len = "LeihgeberIn"
-let = "Libelee-appellant"
-lgd = "LichtgestalterIn"
-lie = "Libelant-appellee"
+len = LeihgeberIn
+let = Libelee-appellant
+lgd = LichtgestalterIn
+lie = Libelant-appellee
 lil = "KlägerIn im Seerecht/Kirchenrecht"
-lit = "Libelant-appellant"
-lsa = "LandschaftsarchitektIn"
-lse = "LizenznehmerIn"
-lso = "LizenzgeberIn"
-ltg = "LithographIn"
-lyr = "TextdichterIn"
+lit = Libelant-appellant
+lsa = LandschaftsarchitektIn
+lse = LizenznehmerIn
+lso = LizenzgeberIn
+ltg = LithographIn
+lyr = TextdichterIn
 mcp = "ArrangeurIn, Notenleser/-schreiberIn"
-mdc = "Metadatenkontakt"
-med = "Medium"
-mfp = "Herstellungsort"
-mfr = "HerstellerIn"
-mitarb = "Mitarbeiter"
-mod = "ModeratorIn"
-moderation = "Moderation"
-mon = "BeobachterIn"
+mdc = Metadatenkontakt
+med = Medium
+mfp = Herstellungsort
+mfr = HerstellerIn
+mitarb = Mitarbeiter
+mod = ModeratorIn
+moderation = Moderation
+mon = BeobachterIn
 mrb = "MarmorarbeiterIn, MarmoriererIn"
-mrk = "Markup-EditorIn"
-msd = "MusikalischeR LeiterIn"
-mte = "Metall-GraveurIn"
-mtk = "ProtokollantIn"
-mus = "MusikerIn"
+mrk = Markup-EditorIn
+msd = MusikalischeR LeiterIn
+mte = Metall-GraveurIn
+mtk = ProtokollantIn
+mus = MusikerIn
 mutmassl Verf = "Mutmaßlicher Verfasser"
 mutmassl VerfKomp = "Mutmaßlicher Verfasser / Komponist"
 mutmaßl hrsg = "mutmaßlicher herausgeber"
-Mutmaßl Verf = "mutmaßlicher Verfasser"
 mutmaßl verf = "mutmaßlicher Verfasser"
 mutmaßl übers = "mutmaßlicher Übersetzer"
-Nachr = "Autor von Nachwort, Kolophon, etc."
 nrt = "ErzählerIn"
-opn = "GegnerIn"
-org = "UrheberIn"
-orm = "VeranstalterIn"
+opn = GegnerIn
+org = UrheberIn
+orm = VeranstalterIn
 osp = "On-screen PräsentatorIn"
-oth = "BerichterstatterIn"
-own = "BesitzerIn"
-pan = "DiskussionsteilnehmerIn"
-pat = "SchirmherrIn"
-pbd = "Verlagsleitung"
-pbl = "Verlag"
-pdr = "Projektleitung"
-pfr = "Korrektur"
-pht = "FotografIn"
-plt = "DruckformherstellerIn"
-pma = "Genehmigungsstelle"
-pmn = "Produktionsleitung"
-pop = "PlattendruckerIn"
-ppm = "PapiermacherIn"
-ppt = "PuppenspielerIn"
-pra = "Praeses"
-prc = "Prozesskontakt"
-prd = "Produktionspersonal"
+oth = BerichterstatterIn
+own = BesitzerIn
+pan = DiskussionsteilnehmerIn
+pat = SchirmherrIn
+pbd = Verlagsleitung
+pbl = Verlag
+pdr = Projektleitung
+pfr = Korrektur
+pht = FotografIn
+plt = DruckformherstellerIn
+pma = Genehmigungsstelle
+pmn = Produktionsleitung
+pop = PlattendruckerIn
+ppm = PapiermacherIn
+ppt = PuppenspielerIn
+pra = Praeses
+prc = Prozesskontakt
+prd = Produktionspersonal
 pre = "PräsentatorIn"
 prf = "AusführendeR"
-prg = "ProgrammiererIn"
-prm = "DruckgrafikerIn"
-prn = "Produktionsfirma"
-pro = "ProduzentIn"
-prod = "Produzent"
-prp = "Produktionsort"
-prs = "SzenenbildnerIn"
-prt = "DruckerIn"
-prv = "AnbieterIn"
+prg = ProgrammiererIn
+prm = DruckgrafikerIn
+prn = Produktionsfirma
+pro = ProduzentIn
+prod = Produzent
+prp = Produktionsort
+prs = SzenenbildnerIn
+prt = DruckerIn
+prv = AnbieterIn
 präses = "Präses"
 pta = "PatentanwärterIn"
 pte = "KlägerIn-BerufungsbeklagteR"
 ptf = "ZivilklägerIn"
-pth = "PatentinhaberIn"
+pth = PatentinhaberIn
 ptt = "KlägerIn-BerufungsklägerIn"
 pup = "Veröffentlichungsort"
-rbr = "RubrikatorIn"
-rcd = "TonmeisterIn"
-rce = "ToningenieurIn"
-rcp = "AdressatIn"
+rbr = RubrikatorIn
+rcd = TonmeisterIn
+rce = ToningenieurIn
+rcp = AdressatIn
 rdd = "HörfunkregisseurIn"
-realisation = "Realisation"
-Red = "Redakteur"
-red = "RedakteurIn"
-regie = "Regie"
+realisation = Realisation
+red = RedakteurIn
+regie = Regie
 ren = "RendererIn (Bildverarbeitung)"
-reporter = "Reporter"
-res = "ForscherIn"
-resp = "Respondent"
+reporter = Reporter
+res = ForscherIn
+resp = Respondent
 rev = "RezensentIn, GutachterIn"
 rpc = "HörfunkproduzentIn"
 rps = "Aufbewahrungsort, TreuhänderIn"
-rpt = "ReporterIn"
-rpy = "Verantwortliche Partei"
-rse = "AntragsgegnerIn-BerufungsbeklagteR"
+rpt = ReporterIn
+rpy = Verantwortliche Partei
+rse = AntragsgegnerIn-BerufungsbeklagteR
 rsg = "RegisseurIn der Wiederaufführung"
-rsp = "BerufungsbeklagteR"
-rsr = "RestauratorIn"
+rsp = BerufungsbeklagteR
+rsr = RestauratorIn
 rst = "AntragsgegnerIn-BerufungsklägerIn"
-rth = "Leitung des Forschungsteams"
-rtm = "Mitglied des Forschungsteams"
-sad = "WissenschaftlicheR BeraterIn"
-Sammler = "Sammler"
-sammler = "Sammler"
-sce = "DrehbuchautorIn"
-Schreiber = "Schreiber"
-scl = "BildhauerIn"
-scr = "SchreiberIn"
-sds = "Tongestalter"
+rth = Leitung des Forschungsteams
+rtm = Mitglied des Forschungsteams
+sad = WissenschaftlicheR BeraterIn
+sammler = Sammler
+sce = DrehbuchautorIn
+scl = BildhauerIn
+scr = SchreiberIn
+sds = Tongestalter
 sec = "SekretärIn"
 sgd = "BühnenregisseurIn"
-sgn = "UnterzeichnerIn"
+sgn = UnterzeichnerIn
 sht = "Unterstützender Veranstalter"
 sll = "VerkäuferIn"
 sng = "SängerIn"
-spk = "RednerIn"
-spn = "SponsorIn"
-sprecher = "Sprecher"
-spy = "Zweite Partei"
-srv = "LandvermesserIn"
+spk = RednerIn
+spn = SponsorIn
+sprecher = Sprecher
+spy = Zweite Partei
+srv = LandvermesserIn
 std = "BühnenbildnerIn"
-stecher = "Stecher"
-stg = "Kulisse"
+stecher = Stecher
+stg = Kulisse
 stl = "GeschichtenerzählerIn"
-stm = "InszenatorIn"
-stn = "Normungsorganisation"
-str = "StereotypeurIn"
-tcd = "Technische Leitung"
-tch = "LehrerIn"
-textverf = "Textverfasser"
+stm = InszenatorIn
+stn = Normungsorganisation
+str = StereotypeurIn
+tcd = Technische Leitung
+tch = LehrerIn
+textverf = Textverfasser
 ths = "BetreuerIn (Doktorarbeit)"
-tld = "FernsehregisseurIn"
-tlp = "FernsehproduzentIn"
-trc = "TranskribiererIn"
+tld = FernsehregisseurIn
+tlp = FernsehproduzentIn
+trc = TranskribiererIn
 trl = "ÜbersetzerIn"
-tyd = "Schrift-DesignerIn"
-tyg = "SchriftsetzerIn"
+tyd = Schrift-DesignerIn
+tyg = SchriftsetzerIn
 tänzer = "Tänzer"
-uvp = "Hochschulort"
-vac = "SynchronsprecherIn"
-vdg = "BildregisseurIn"
-Verstorb = "Verstorbener"
-verstorb = "Verstorbener"
-voc = "VokalistIn"
-vorl = "Vorlage"
-Vorr = "Autor der Einleitung, Vorwort, etc."
-wac = "KommentarverfasserIn"
+uvp = Hochschulort
+vac = SynchronsprecherIn
+vdg = BildregisseurIn
+verstorb = Verstorbener
+voc = VokalistIn
+vorl = Vorlage
+wac = KommentarverfasserIn
 wal = "VerfasserIn von zusätzlichen Lyrics"
-wam = "AutorIn des Begleitmaterials"
-wat = "VerfasserIn von Zusatztexten"
-wdc = "HolzschneiderIn"
-wde = "HolzschnitzerIn"
+wam = AutorIn des Begleitmaterials
+wat = VerfasserIn von Zusatztexten
+wdc = HolzschneiderIn
+wde = HolzschnitzerIn
 widmungsempfänger = "Widmungsempfänger"
-win = "VerfasserIn einer Einleitung"
-wit = "ZeugeIn"
-wpr = "VerfasserIn eines Vorworts"
+win = VerfasserIn einer Einleitung
+wit = ZeugeIn
+wpr = VerfasserIn eines Vorworts
 wst = "VerfasserIn von ergänzendem Text"
-zeichner = "Zeichner"
-zensor = "Zensor"
+zeichner = Zeichner
+zensor = Zensor
 Übers = "Übersetzer"
 übers = "Übersetzer"
