added role and aria label to all myresearch menu instances, reverted results.phtml of search as no proper label can be assigned on the fly, created a more general label for the advanced search layout

--- a/languages/de.ini
+++ b/languages/de.ini
@@ -1165,6 +1165,7 @@ Search Home = "Suche"
 Search Mode = "Suchmodus"
 Search Results = "Suchergebnisse"
 search results of = "Treffer von"
+Search Filter and Tips = "Suchfilter und Tipps
 Search Tips = "Suchtipps"
 Search Tools = "Suchwerkzeuge"
 Search Type = "Suchmodus"
