improve accessibility for checkboxes

--- a/languages/de.ini
+++ b/languages/de.ini
@@ -1184,7 +1184,8 @@ See also = "Siehe auch"
 see_all_ellipsis = "Alle anzeigen …"
 Select this record = "Datensatz auswählen"
 Select your carrier = "Wählen Sie Ihren Telefonanbieter aus"
-select_page = "Alles auswählen"
+select_page = "Alle Einträge der Seite auswählen"
+select_page_cart = "Alle Einträge der Zwischenablage auswählen"
 select_pickup_location = "Abholort auswählen"
 select_request_group = "Abholstelle auswählen"
 Selected = "Ausgewählt"
