--- a/languages/en.ini
+++ b/languages/en.ini
@@ -1184,7 +1184,8 @@ See also = "See also"
 see_all_ellipsis = "see all…"
 Select this record = "Select this record"
 Select your carrier = "Select your carrier"
-select_page = "Select Page"
+select_page = "Select all entries of the page"
+select_page_cart = "Select all entries of the clipboard"
 select_pickup_location = "Select Pick Up Location"
 select_request_group = "Select Request Group"
 Selected = "Selected"
