--- a/languages/de.ini
+++ b/languages/de.ini
@@ -1182,6 +1182,10 @@ seconds_abbrev = "s"
 see all = "Alle anzeigen"
 See also = "Siehe auch"
 see_all_ellipsis = "Alle anzeigen …"
+select_item_checked_out_renew = "Titel zum Verlängern auswählen"
+select_item_hold_cancel = "Titel auswählen, um Bestellung oder Vormerkung zu stornieren"
+select_item_ill_request_cancel = "Titel auswählen, um Fernleihanfrage zu stornieren"
+select_item_storage_retrieval_request_cancel = "Titel auswählen, um Magazinbestellung zu stornieren"
 Select this record = "Datensatz auswählen"
 Select your carrier = "Wählen Sie Ihren Telefonanbieter aus"
 select_page = "Alle Einträge der Seite auswählen"
