--- a/languages/en.ini
+++ b/languages/en.ini
@@ -1189,7 +1189,7 @@ select_item_hold_cancel = "Select item for canceling holds or recall"
 select_item_ill_request_cancel = "Select item for canceling interlibrary loan requests"
 select_item_storage_retrieval_request_cancel = "Select item for canceling storage retrieval requests"
 select_page = "Select all entries of the page"
-select_page_cart = "Select all entries of the clipboard"
+select_page_cart = "Select all entries of the Book Bag"
 select_pickup_location = "Select Pick Up Location"
 select_request_group = "Select Request Group"
 Selected = "Selected"
