--- a/languages/en.ini
+++ b/languages/en.ini
@@ -1185,7 +1185,7 @@ see_all_ellipsis = "see all…"
 Select this record = "Select this record"
 Select your carrier = "Select your carrier"
 select_item_checked_out_renew = "Select item for renewing"
-select_item_hold_cancel = "Select item for canceling holds or recall"
+select_item_hold_cancel = "Select item for canceling holds or recalls"
 select_item_ill_request_cancel = "Select item for canceling interlibrary loan requests"
 select_item_storage_retrieval_request_cancel = "Select item for canceling storage retrieval requests"
 select_page = "Select all entries of the page"
