--- a/languages/en.ini
+++ b/languages/en.ini
@@ -1184,12 +1184,13 @@ See also = "See also"
 see_all_ellipsis = "see all…"
 Select this record = "Select this record"
 Select your carrier = "Select your carrier"
+select_all_on_page = "Select all items of the page"
 select_item_checked_out_renew = "Select item for renewing"
 select_item_hold_cancel = "Select item for canceling holds or recalls"
 select_item_ill_request_cancel = "Select item for canceling interlibrary loan requests"
 select_item_storage_retrieval_request_cancel = "Select item for canceling storage retrieval requests"
-select_page = "Select all entries of the page"
-select_page_cart = "Select all entries of the Book Bag"
+select_page = "Select Page"
+select_page_cart = "Select all items of the Book Bag"
 select_pickup_location = "Select Pick Up Location"
 select_request_group = "Select Request Group"
 Selected = "Selected"
