fix typo to: items on the page

--- a/languages/en.ini
+++ b/languages/en.ini
@@ -1184,7 +1184,7 @@ See also = "See also"
 see_all_ellipsis = "see all…"
 Select this record = "Select this record"
 Select your carrier = "Select your carrier"
-select_all_on_page = "Select all items of the page"
+select_all_on_page = "Select all items on the page"
 select_item_checked_out_renew = "Select item for renewing"
 select_item_hold_cancel = "Select item for canceling holds or recalls"
 select_item_ill_request_cancel = "Select item for canceling interlibrary loan requests"
