--- a/languages/en.ini
+++ b/languages/en.ini
@@ -1190,7 +1190,7 @@ select_item_hold_cancel = "Select item for canceling holds or recalls"
 select_item_ill_request_cancel = "Select item for canceling interlibrary loan requests"
 select_item_storage_retrieval_request_cancel = "Select item for canceling storage retrieval requests"
 select_page = "Select Page"
-select_page_cart = "Select all items of the Book Bag"
+select_page_cart = "Select all items in the Book Bag"
 select_pickup_location = "Select Pick Up Location"
 select_request_group = "Select Request Group"
 Selected = "Selected"
