Add aria labels for control elements (#2845)

--- a/languages/en.ini
+++ b/languages/en.ini
@@ -784,6 +784,7 @@ MLA Citation = "MLA Citation"
 MLA Edition Citation = "MLA (8th ed.) Citation"
 Mobile Number = "Mobile Number"
 mobile_link = "You appear to be on a mobile device; switch to mobile view?"
+mobile_toggle_navigation_text = "Toggle navigation"
 Monograph Title = "Monograph Title"
 more = "more"
 More catalog results = "More catalog results"
@@ -1340,6 +1341,7 @@ Title View = "Title View"
 title_hold_place = "Place a Title Level Request"
 title_wrapper = "%%pageTitle%% %%titleSeparator%% %%siteTitle%%"
 To = "To"
+toggle_dropdown = "Toggle Dropdown"
 Too Many Email Recipients = "Too Many Email Recipients"
 too_many_favorites = "This list is too large to display all at once. Try rearranging your saved items into more lists or limiting using tags."
 too_many_new_items = "There are too many new items to display in a single list. Try limiting your search."
