changed account nav aria label to 'account_menu_label' according to discussion

--- a/languages/en.ini
+++ b/languages/en.ini
@@ -10,6 +10,7 @@ account_block_options_missing = "Some choices have been removed due to a block o
 account_checkouts_due = "Items due soon"
 account_checkouts_overdue = "Items overdue"
 account_has_alerts = "Your account has alerts"
+account_menu_label = "Account information and options"
 account_normal_checkouts = "Items due later"
 account_requests_available = "Available for Pickup"
 account_requests_in_transit = "In Transit"
