change translations for select_item_hold_cancel

--- a/languages/en.ini
+++ b/languages/en.ini
@@ -1186,7 +1186,7 @@ Select this record = "Select this record"
 Select your carrier = "Select your carrier"
 select_all_on_page = "Select all items on the page"
 select_item_checked_out_renew = "Select item for renewing"
-select_item_hold_cancel = "Select item for canceling holds or recalls"
+select_item_hold_cancel = "Select hold or recall for further action"
 select_item_ill_request_cancel = "Select item for canceling interlibrary loan requests"
 select_item_storage_retrieval_request_cancel = "Select item for canceling storage retrieval requests"
 select_page = "Select Page"
