Display custom hidden filters as a temporary search tab.
Previously the default tab was displayed as active when current hidden filters did not match any of the tabs, which was quite misleading and confusing. This change makes it possible to display a temporary custom tab in this case, or optionally not display any tab as active by emptying the translation.

--- a/languages/sv.ini
+++ b/languages/sv.ini
@@ -1318,6 +1318,7 @@ tag_delete_warning = "Varning! Du håller på att ta bort %count% tag(gar)"
 tag_filter_empty = "Inga taggar är tillgängliga för detta filter"
 Tags = "Taggar"
 tags_deleted = "%count% tag(gar) raderad"
+temporary_search_tab_title = "Anpassad sökning"
 test_fail = "Misslyckades"
 test_fix = "Reparera"
 test_ok = "OK"
