Added initial version of northern sami language

--- a/languages/native.ini
+++ b/languages/native.ini
@@ -25,6 +25,7 @@ Japanese = "日本語"
 Polish = "polski"
 Portuguese = "Português"
 Russian = "Русский"
+Northern Sámi = "Sámegiella"
 Simplified Chinese = "中文(简体)"
 Slovene = "slovenščina"
 Spanish = "Español"
