--- a/languages/en.ini
+++ b/languages/en.ini
@@ -342,6 +342,7 @@ draw_searchbox_end = "Release mouse to finish drawing."
 draw_searchbox_start = "Click and drag to select an area."
 Due = "Due"
 Due Date = "Due Date"
+dumb_captcha_prompt = "Please enter the above text in reverse order:"
 DVD = "DVD"
 eBook = "eBook"
 Edit = "Edit"
