Adjust some outdated elements.

--- a/languages/se.ini
+++ b/languages/se.ini
@@ -268,7 +268,7 @@ del_search = "Sihko ohcanjoavkku"
 Delete = "Sihko"
 delete_account_confirm = "Háliidatgo sihkkarit sihkkut iežat konttu?"
 delete_account_failure = "Kontosihkkun ii lihkostuvvan."
-delete_account_success_message = "Kontu sihkkojuvvon. Čálihuvvame olggos..."
+delete_account_success_message = "Kontu sihkkojuvvon. Čálihuvvame olggos…"
 delete_account_title = "Sihko konttu"
 delete_all = "Sihko visot"
 delete_comment_failure = "Kommeantta sihkkun ii lihkostuvvan."
@@ -338,7 +338,7 @@ email_maximum_recipients_note = "Eanemusat %%max%% vuostáváldi lobálaččat"
 email_multiple_recipients_note = "Sáhtát logahallat máŋga vuostáváldi nu ahte sirret rihkuin."
 email_selected = "Sádde válljemiid šleađgaboasttain"
 email_selected_favorites = "Sádde válljejuvvon oiddohiid šleađgaboasttain"
-email_sending = "Sáddejuvvo dieđáhus..."
+email_sending = "Sáddejuvvo dieđáhus…"
 email_subject = "Fáddá"
 email_success = "Dieđáhus sáddejuvvon"
 Empty = "Guorus"
@@ -385,6 +385,9 @@ fav_list_delete_cancel = "Listu ii sihkkojuvvon."
 fav_list_delete_fail = "Dáhpáhuvai meattáhus. Listu ii sihkkojuvvon."
 Favorites = "Oiddohat"
 Fee = "Máksu"
+feedback_help_label = "Dárbbašatgo veahki?"
+feedback_response = "Skovvi sáddejuvvon!"
+feedback_title = "Sádde midjiide máhcahaga"
 Field of activity = "Doaibmasuorgi"
 File Description = "Fiilla govvádus"
 Filter = "Filter"
@@ -392,8 +395,8 @@ filter_tags = "Sille fáddágilkoriid"
 filter_toggle_entries = "%%count%% ráddjema"
 filter_wildcard = "Mii beare"
 Find = "Viečča"
-Find More = "Viečča lasi"
 Find New Items = "Ođatlistu"
+find_more_ellipsis = "Viečča lasi…"
 Finding Aid = "Ohcu"
 Fine = "Máksu"
 Fine Date = "Girjenbeaivemearri"
@@ -403,8 +406,10 @@ First = "Vuosttaš"
 First Name = "Ovdanamma"
 First Search Result = "Vuosttaš ohcanboađus"
 fix_metadata = "Juo, divo govvádusdieđuid – mun vuorddán"
+footer_header_find_more = "Viečča lasi"
+footer_header_need_help = "Dárbbašatgo veahki?"
+footer_header_search_options = "Ozu molssaeavttut"
 for search = "deaivamis ohcui"
-Form Submitted! = "Skovvi sáddejuvvon!"
 Format = "Materiálatiipa"
 From = "Sáddejeaddji"
 Full description = "Olles dieđut"
@@ -602,6 +607,7 @@ Library Catalog Username = "Girjerádjogoartta dovddaldat"
 Library Web Search = "Web-ohcu"
 lightbox_error = "Meattáhus: Báhccanláse ládden ii lihkostuvvan."
 Limit To = "Ráddjemat"
+link_text_need_help = "Dárbbašatgo veahki?"
 Linked Full Text = "Liŋkejuvvon ollesdeaksta"
 List = "Listu"
 List Tags = "Liste fáddágilkoriid"
@@ -659,7 +665,6 @@ My Profile = "Iežan dieđut"
 Narrow Search = "Ráddje ozu"
 navigate_back = "Ruovttoluotta"
 nearby_items = "Bohtosat lahka: %%title%%"
-Need Help? = "Dárbbašatgo veahki?"
 New Item Feed = "Bibmosat ođahiin"
 New Item Search = "Ođatohcu"
 New Item Search Results = "Ođatozu bohtosat"
@@ -882,13 +887,11 @@ Publisher = "Olggosaddi"
 Publisher Information = "Olggosaddi dieđut"
 Publisher Permissions = "Almmustahttinvuoigatvuođat"
 QR Code = "QR-koda"
-qrcode_hide = "Čiega QR-koda"
-qrcode_show = "Čájet QR-koda"
 query time = "ohcanáigi"
 random_recommendation_title = "Deivvolaš bohtosat ohcanbohtosiid joavkkus"
 Range = "Áigegaska"
 Range slider = "Gaskka mudden"
-Read the full review online... = "Loga árvvoštallama ollislažžan..."
+Read the full review online... = "Loga árvvoštallama ollislažžan…"
 Recall This = "Daga várrema"
 recently_returned_channel_title = "Gieskat máhcahuvvon"
 recommend_links_text = "Sáhtát maid geahččalit:"
@@ -908,10 +911,10 @@ Reference Material = "Ohcangirjemateriála"
 Refine Results = "Aiddostahte ozu"
 Region = "Guovlu"
 relais_available = "Materiála lea oažžumis gáiddusluoikkasin. Háliidatgo dahkat gáiddusluoikkahanbivdosa?"
-relais_checking = "Dárkkistuvvo oažžasuvvan..."
+relais_checking = "Dárkkistuvvo oažžasuvvan…"
 relais_error_html = "Bivdda  ii lihkostuvvan. Daga bivdaga <a href=%%url%% target='new'>gáiddusluoikkahanbálvalusa siidduin.</a>"
 relais_request = "Gáiddusbálvalanbivdda"
-relais_requesting = "Bivdda sáddejuvvo..."
+relais_requesting = "Bivdda sáddejuvvo…"
 relais_search = "Gáiddusbálvalanohcu"
 relais_success_label = "Váfisteapmi:"
 relais_success_message = "Bivdda dáhkkojuvvon dovddaldagain #%%id%%. Oaččut váfisteami šleađgaboasttain."
@@ -966,7 +969,6 @@ Search For Items on Reserve = "Oza gursagirjjiid"
 Search History = "Ohcanhistorjá"
 Search Home = "Ozu álggahansiidu"
 Search Mode = "Ohcanvuohki"
-Search Options = "Ozu molssaeavttut"
 Search Results = "Ohcanbohtosat"
 search results of = "oktiibuot"
 Search Tips = "Ohcanráva"
@@ -988,14 +990,13 @@ select_pickup_location = "Vállje viežžanbáikki"
 select_request_group = "Vállje várrenjoavkku"
 Selected = "Válljejuvvon"
 Send = "Sádde"
-Send us your feedback! = "Sádde midjiide máhcahaga"
 send_an_email_copy = "Sádde kopiija dán čujuhussii"
 send_email_copy_to_me = "Sádde kopiija munnje"
 Sensor Image = "Gáiddusgártengovva"
 Serial = "Áigepublikašuvdna"
 Series = "Ráidu"
 Set = "Ásat"
-shortlink_redirect = "Siidu stivrahuvvá ođđasit %%delay%% sekundda geahčen..."
+shortlink_redirect = "Siidu stivrahuvvá ođđasit %%delay%% sekundda geahčen…"
 show_filters_html = "Čájet ráddjemiid (%%count%%)"
 showing_items_html = "Čájehuvvojit  bohtosat <strong>%%start%% - %%end%%</strong>"
 showing_items_of_html = "Čájehuvvojit  <strong>%%start%% - %%end%%</strong> oktiibuot  <strong>%%total%%</strong> bohtosis "
@@ -1010,7 +1011,7 @@ skip_step = "Mana meaddel dán muttu"
 Slide = "Dia"
 sms_failure = "Meattáhus! Dieđáhus ii sáhttán sáddejuvvot."
 sms_phone_number = "Deakstadieđáhusnummár"
-sms_sending = "Sáddeme dieđáhusa..."
+sms_sending = "Sáddeme dieđáhusa…"
 sms_success = "Dieđáhus sáddejuvvon."
 Software = "Dihtorprográmma"
 Sorry, but the help you requested is unavailable in your language. = "Dađi bahábut du bivdin ráva ii leat oažžumis sámegillii."
@@ -1068,7 +1069,7 @@ Subject Area = "Fáddáguovlu"
 Subject Geographic = "Geográfalaš fáddá"
 Subject Recommendations = "Fáddáevttohusat"
 Subject Terms = "Áššesánit"
-Subject(s) = "Fáddá/fáttát"
+Subjects = "Fáttát"
 Submit = "Sádde"
 Submitting = "Sáddejuvvo"
 Suggested Topics = "Fáddáevttohusat"
