--- a/languages/en.ini
+++ b/languages/en.ini
@@ -715,6 +715,8 @@ Last Name = "Last Name"
 Last Search Result = "Last Search Result"
 less = "less"
 less_ellipsis = "less…"
+libguidesaz_recommendations = "Database Results"
+libguidesaz_recommendations_more = "More Database Results"
 libphonenumber_invalid = "Phone number invalid"
 libphonenumber_invalidcountry = "Invalid country calling code"
 libphonenumber_invalidregion = "Invalid region code:"
