EPF: Add results recommendation module

--- a/languages/en.ini
+++ b/languages/en.ini
@@ -397,6 +397,8 @@ empty_search_disallowed = "An empty query is not allowed with the search target"
 Enable Auto Config = "Enable Auto Config"
 End Page = "End Page"
 eol_ellipsis = "…"
+epf_recommendations = "Publication Results"
+epf_recommendations_more = "More Publication Results"
 ePub Full Text = "ePub Full Text"
 Era = "Era"
 error_inconsistent_parameters = "Sorry, an error has occurred. Inconsistent parameters detected."
