Add missing heading

--- a/languages/en.ini
+++ b/languages/en.ini
@@ -717,6 +717,7 @@ Last Name = "Last Name"
 Last Search Result = "Last Search Result"
 less = "less"
 less_ellipsis = "less…"
+libguides_profile_suggestion_heading = "Talk to a Subject Librarian"
 libguides_recommendations = "Research Guide Results"
 libguides_recommendations_more = "More Research Guide Results"
 libguidesaz_recommendations = "Database Results"
