change confounded / old transloations of select_page and select_page_cart in en.ini

--- a/languages/en.ini
+++ b/languages/en.ini
@@ -1205,8 +1205,8 @@ select_item_ill_request_cancel = "Select item for canceling interlibrary loan re
 select_item_storage_retrieval_request_cancel = "Select item for canceling storage retrieval requests"
 Select this record = "Select this record"
 Select your carrier = "Select your carrier"
-select_page = "Select all entries of the page"
-select_page_cart = "Select all entries of the clipboard"
+select_page = "Select all entries on the page"
+select_page_cart = "Select all entries in the book bag"
 select_pickup_location = "Select Pick Up Location"
 select_request_group = "Select Request Group"
 Selected = "Selected"
