--- a/packages/DEBIAN/changelog
+++ b/packages/DEBIAN/changelog
@@ -1,3 +1,9 @@
+vufind 9.0.3 distribution; urgency=low
+
+  * VuFind 9.0.3 release (see http://vufind.org/wiki/changelog for details)
+
+ -- maintainer VuFind Project Management Committee <info@vufind.org>  Mo 24 Jul 2023 14:00:00 UTC
+
 vufind 9.0.2 distribution; urgency=low
 
   * VuFind 9.0.2 release (see http://vufind.org/wiki/changelog for details)
