add non generic aria-label to checkbox

--- a/languages/en.ini
+++ b/languages/en.ini
@@ -1202,6 +1202,7 @@ see_all_ellipsis = "see all…"
 Select this record = "Select this record"
 Select your carrier = "Select your carrier"
 select_all_on_page = "Select all entries on the page"
+select_item = "Select item for further action"
 select_item_checked_out_renew = "Select item for renewing"
 select_item_hold_cancel = "Select item for canceling holds or recalls"
 select_item_ill_request_cancel = "Select item for canceling interlibrary loan requests"
