--- a/languages/de.ini
+++ b/languages/de.ini
@@ -1187,6 +1187,7 @@ see_all_ellipsis = "Alle anzeigen …"
 Select this record = "Datensatz auswählen"
 Select your carrier = "Wählen Sie Ihren Telefonanbieter aus"
 select_all_on_page = "Alle Einträge der Seite auswählen"
+select_item = "Titel für weitere Aktion auswählen"
 select_item_checked_out_renew = "Titel zum Verlängern auswählen"
 select_item_hold_cancel = "Titel auswählen, um Bestellung oder Vormerkung zu stornieren"
 select_item_ill_request_cancel = "Titel auswählen, um Fernleihanfrage zu stornieren"
