--- a/languages/de.ini
+++ b/languages/de.ini
@@ -1192,6 +1192,7 @@ select_item_checked_out_renew = "Titel zum Verlängern auswählen"
 select_item_hold_cancel = "Titel auswählen, um Bestellung oder Vormerkung zu stornieren"
 select_item_ill_request_cancel = "Titel auswählen, um Fernleihanfrage zu stornieren"
 select_item_storage_retrieval_request_cancel = "Titel auswählen, um Magazinbestellung zu stornieren"
+select_item_purge = "Titel zum Entfernen auswählen"
 select_page = "Alles auswählen"
 select_page_cart = "Alle Einträge der Zwischenablage auswählen"
 select_pickup_location = "Abholort auswählen"
