--- a/languages/en.ini
+++ b/languages/en.ini
@@ -1207,6 +1207,7 @@ select_item_checked_out_renew = "Select item for renewing"
 select_item_hold_cancel = "Select item for canceling holds or recalls"
 select_item_ill_request_cancel = "Select item for canceling interlibrary loan requests"
 select_item_storage_retrieval_request_cancel = "Select item for canceling storage retrieval requests"
+select_item_purge = "Select item for purging"
 select_page = "Select Page"
 select_page_cart = "Select all entries in the book bag"
 select_pickup_location = "Select Pick Up Location"
