[VUFIND-1598] Allow users to view their proxy relationships

--- a/languages/en.ini
+++ b/languages/en.ini
@@ -1045,6 +1045,9 @@ pronounced = "pronounced"
 Provider = "Provider"
 proxied_user = "Place request for proxied user"
 proxy_hold_place_success_html = "Your proxy request was successful. <a href="%%url%%">Your Holds and Recalls</a>."
+proxy_list_heading = "Your Proxy Relationships"
+proxy_list_by = "Users You Can Proxy"
+proxy_list_for = "Users Who Can Proxy You"
 Public = "Public"
 public_list_indicator = "Public List"
 Publication = "Publication"
