--- a/languages/en.ini
+++ b/languages/en.ini
@@ -775,7 +775,7 @@ Login = "Login"
 Login for full access = "Login for full access."
 login_disabled = "Login is not available at this time."
 login_target = "Library"
-login_warning_email_message = "Suspicious login has been detected on your account. All your saved logins have been invalidated and you will be required to log in again. It is recommended that you change your password and review your account activity to make sure there are no unfamiliar actions."
+login_warning_email_message = "%%title%%: Suspicious login has been detected on your account. All your saved logins have been invalidated and you will be required to log in again. It is recommended that you change your password and review your account activity to make sure there are no unfamiliar actions."
 login_warning_email_subject = "Alert: Suspicious login detected"
 Logout = "Logout"
 Main Author = "Main Author"
