accessibility: advanced search remove group labels.

--- a/languages/en.ini
+++ b/languages/en.ini
@@ -311,6 +311,7 @@ date_year_placeholder = "Y"
 Debug Information = "Debug Information"
 deep_paging_failure = "The search results page you requested is not currently available; you have been redirected to page %%page%%."
 del_search = "Remove Search Group"
+del_search_num = "Remove Search Group %%num%%"
 Delete = "Delete"
 delete_account_confirm = "Are you sure you want to delete your account?"
 delete_account_description_html = "Saved searches and item lists will be deleted. You can still establish a new account later if you wish."
